added regitration user function
