# api/docs/swagger.json
@@ -177,6 +177,37 @@
                 }
             }
         },
+        "/v1/register/": {
+            "post": {
+                "description": "This API for registration new user",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Register User",
+                "parameters": [
+                    {
+                        "description": "user body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structures.UserStruct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/update_user/": {
             "post": {
                 "description": "This API for updating user",
@@ -244,9 +275,54 @@
                     }
                 }
             }
+        },
+        "/v1/users/verify_user/": {
+            "post": {
+                "description": "This api for sending email code to user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Verify User",
+                "parameters": [
+                    {
+                        "description": "user body",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structures.EmailVer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "structures.EmailVer": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "email_code": {
+                    "type": "string"
+                }
+            }
+        },
         "structures.NoteStruct": {
             "type": "object",
             "properties": {
@@ -285,6 +361,9 @@
                 "email": {
                     "type": "string"
                 },
+                "email_code": {
+                    "type": "string"
+                },
                 "first_name": {
                     "type": "string"
                 },
@@ -294,7 +373,13 @@
                 "last_name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "updated_at": {
+                    "type": "string"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
