# pkg/structures/structures.go
@@ -5,6 +5,9 @@ type UserStruct struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
+	UserName  string `json:"user_name"`
+	Password  string `json:"password"`
+	EmailCode string `json:"email_code"`
 	CreatedAt string `json:"created_at"`
 	UpdatedAt string `json:"updated_at"`
 	DeletedAt string `json:"deleted_at"`
@@ -22,4 +25,14 @@ type NoteStruct struct {
 
 type JwtRequestModel struct {
 	Token string `json:"token"`
+}
+
+type UserCheckRequest struct {
+	Field string `json:"field"`
+	Value string `json:"value"`
+}
+
+type EmailVer struct {
+	Email     string `json:"email"`
+	EmailCode string `json:"email_code"`
 }
